--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div class="items-3 item">3</div>
         <div class="items-4 item">4</div>
         <div class="items-5 item">5</div>
+        <div class="items-6 item">6</div>
+        <div class="items-7 item">7</div>
+        <div class="items-8 item">8</div>
+        <div class="items-9 item">9</div>
+        <div class="items-10 item">10</div>
     </div>
 
     
